Fixing alignment on title - It has to set a height into the DOM parent - Also when it hasn't enough space, will handle the xAxis and yAxis positions

--- a/app/scss/components/_containers.scss
+++ b/app/scss/components/_containers.scss
@@ -1,6 +1,6 @@
 .slides {
   .title span {
-    position: relative;
+    position: absolute;
     display: inline-block;
     opacity: 0;
     transform: translateX(0);
