--- a/app/scss/general/_index.scss
+++ b/app/scss/general/_index.scss
@@ -8,6 +8,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   text-align: left;
   text-shadow: 0 4px 9px rgba(0, 0, 0, .5);
+  position: relative;
 }
 
 .common-list {
